Fix BG image on mobiles

--- a/app/globals.css
+++ b/app/globals.css
@@ -1235,3 +1235,11 @@ body {
     margin: 0;
   }
 }
+
+@media (max-width: 400px) {
+  .hero {
+    background-position:
+      calc(100% + 28px) calc(100% + 36px),
+      center;
+  }
+}
